--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                       </figure>
                       <p class="text-white"><strong>Thizza Muller</strong></p>
                       <blockquote>
-                        <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde tenetur quis facilis quam optio voluptate totam placeat, doloremque. Sit repellat ipsum dolor fugit similique itaque maxime saepe ipsam. Velit, harum!&rdquo;</p>
+                        <p>&ldquo;A princesa estava perdida no mundo sozinha! Agora ela não tá mais sozinha... Tá perdida junto!&rdquo;</p>
                       </blockquote>
                     </div>
 
@@ -146,7 +146,8 @@
                       </figure>
                       <p class="text-white"><strong>Anna Maria</strong></p>
                       <blockquote>
-                        <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde tenetur quis facilis quam optio voluptate totam placeat, doloremque. Sit repellat ipsum dolor fugit similique itaque maxime saepe ipsam. Velit, harum!&rdquo;</p>
+                        <p>&ldquo;O Dragão não queria que ninguém pegasse a princesa Diiiii.
+                          Mas agora a princesa Diii tá livre para amar na orla do mar!&rdquo;</p>
                       </blockquote>
                     </div>
 
