--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Cacau & Luis &mdash; O Casamento do Século</title>
+    <title>Cacau & Luiz &mdash; O Casamento do Século</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -172,7 +172,7 @@
                     <div>
                       <h2 class="mt-0 mb-2"><a href="single.html">Oi, sou a Cacau!</a></h2>
                       <div class="meta mb-3">Postada por Claudinéia em <a href="#">18 de Janeiro de 2020</a></div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis aliquid doloremque qui, saepe alias eum?</p>
+                      <p>Sou a Cacau, gosto de comer e dar risada!</p>
                     </div>
                   </div>
                 </div>
@@ -182,8 +182,8 @@
                     <div class="mr-0 mr-md-5 mb-3 img-wrap"><a href="single.html"><img src="images/blog_2.jpg" alt="Image" class="img-fluid"></a></div>
                     <div>
                       <h2 class="mt-0 mb-2"><a href="single.html">Opa, Prof. Lulu tá na área!</a></h2>
-                      <div class="meta mb-3">Posteda Prof. Lulu em <a href="#">29 de Abril de 2023</a></div>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis aliquid doloremque qui, saepe alias eum?</p>
+                      <div class="meta mb-3">Postada Prof. Lulu em <a href="#">29 de Abril de 2023</a></div>
+                      <p>Sou o Luiz, gosto de ralar grão de bico!</p>
                     </div>
                   </div>
                 </div>
