--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <header class="header-bar d-flex d-lg-block align-items-center site-navbar-target" data-aos="fade-right">
     <div class="site-logo">
-      <a href="index.html">Cacau Realeza ♪Diiiii♫</a>
+      <a href="index.html">Casal Realeza ♪Diiiii♫</a>
     </div>
     
     <div class="d-inline-block d-lg-none ml-md-0 ml-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
@@ -243,7 +243,7 @@
 
                     <div class="row form-group">
                       <div class="col-md-12">
-                        <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white">
+                        <input type="submit" value="Enviar Mensagem" class="btn btn-primary btn-md text-white">
                       </div>
                     </div>
 
