--- a/index.html
+++ b/index.html
@@ -67,10 +67,7 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-md-7 text-center">
             <h1 class="text-white heading text-uppercase" data-aos="fade-up">Sejam Bem Vindos</h1>
-            <p class="lead text-white mb-5" data-aos="fade-up" data-aos-delay="100">Meus beijos sem os seus, não dariam
-              Os dias chegariam sem paixão
-              Meu corpo sem o seu, uma parte
-              Seria o acaso e não sorte ♪♫</p>
+            <p class="lead text-white mb-5" data-aos="fade-up" data-aos-delay="100">Meus beijos sem os seus, não dariam, os dias chegariam sem paixão, meu corpo sem o seu uma parte seria o acaso e não sorte... ♪♫</p>
             <p data-aos="fade-up" data-aos-delay="100"><a href="#section-contact" class="btn btn-primary btn-md smoothscroll">Contate-os</a></p>
           </div>
         </div>
@@ -148,6 +145,26 @@
                       <blockquote>
                         <p>&ldquo;O Dragão não queria que ninguém pegasse a princesa Diiiii.
                           Mas agora a princesa Diii tá livre para amar na orla do mar!&rdquo;</p>
+                      </blockquote>
+                    </div>
+
+                    <div class="testimony text-center px-md-4">
+                      <figure class="mx-auto d-inline-block">
+                        <img src="images/person_4.jpg" alt="Image" class="mx-auto img-fluid w-25 rounded-circle">
+                      </figure>
+                      <p class="text-white"><strong>Pedro Rudah</strong></p>
+                      <blockquote>
+                        <p>&ldquo;Diiiiiiiiiiiiiiiiiiiiii!&rdquo;</p>
+                      </blockquote>
+                    </div>
+
+                    <div class="testimony text-center px-md-4">
+                      <figure class="mx-auto d-inline-block">
+                        <img src="images/person_5.jpg" alt="Image" class="mx-auto img-fluid w-25 rounded-circle">
+                      </figure>
+                      <p class="text-white"><strong>Mario Montano</strong></p>
+                      <blockquote>
+                        <p>&ldquo;Desde o começo yo fale com Vida, tem meu total apoio! Só quero o dote Diii.&rdquo;</p>
                       </blockquote>
                     </div>
 
