--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@
                       </blockquote>
                     </div>
 
+                    <div class="testimony text-center px-md-4">
+                      <figure class="mx-auto d-inline-block">
+                        <img src="images/person_6.jpg" alt="Image" class="mx-auto img-fluid w-25 rounded-circle">
+                      </figure>
+                      <p class="text-white"><strong>Ricardo Muller</strong></p>
+                      <blockquote>
+                        <p>&ldquo;Não sei de nada! Vim pela cerveja!&rdquo;</p>
+                      </blockquote>
+                    </div>
+
                   </div>
 
                 </div>
