--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <link rel="stylesheet" href="css/style.css">
 
   </head>
-  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
   
+  <body data-spy="scroll" data-target=".site-navbar-target" data-offset="200">
+
+    <audio src="aindabem.mp3" autoplay loop></audio>
 
   <div class="site-wrap">
 
@@ -312,6 +314,6 @@
   <script src="js/jquery.fancybox.min.js"></script>
 
   <script src="js/main.js"></script>
-    
+  
   </body>
 </html>
